--- a/src/main/resources/AjoutStagiaire.fxml
+++ b/src/main/resources/AjoutStagiaire.fxml
@@ -7,23 +7,23 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="ajoutBtn" layoutX="92.0" layoutY="402.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="72.0" text="Ajouter" />
-      <Button fx:id="resetBtn" layoutX="209.0" layoutY="402.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="72.0" text="Reset" />
-      <Button fx:id="annulBtn" layoutX="333.0" layoutY="402.0" mnemonicParsing="false" text="Annuler" />
-      <Label alignment="CENTER_RIGHT" layoutX="56.0" layoutY="64.0" prefHeight="21.0" prefWidth="184.0" text="Nom" />
-      <Label alignment="CENTER_RIGHT" layoutX="56.0" layoutY="129.0" prefHeight="21.0" prefWidth="184.0" text="Prénom" />
-      <Label alignment="CENTER_RIGHT" layoutX="56.0" layoutY="189.0" prefHeight="21.0" prefWidth="184.0" text="Département" />
-      <Label alignment="CENTER_RIGHT" layoutX="56.0" layoutY="252.0" prefHeight="21.0" prefWidth="184.0" text="Promotion" />
-      <Label alignment="CENTER_RIGHT" layoutX="57.0" layoutY="327.0" text="Année d'entrée en formation" />
-      <Label layoutX="130.0" layoutY="14.0" text="AJOUT D'UN STAGIAIRE">
+      <Button fx:id="ajoutStBtn" layoutX="96.0" layoutY="426.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="72.0" text="Ajouter" />
+      <Button fx:id="resetStBtn" layoutX="216.0" layoutY="426.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="72.0" text="Reset" />
+      <Button fx:id="annulStBtn" layoutX="339.0" layoutY="426.0" mnemonicParsing="false" text="Annuler" />
+      <Label alignment="CENTER_RIGHT" layoutX="55.0" layoutY="138.0" prefHeight="21.0" prefWidth="184.0" text="Nom" />
+      <Label alignment="CENTER_RIGHT" layoutX="55.0" layoutY="193.0" prefHeight="21.0" prefWidth="184.0" text="Prénom" />
+      <Label alignment="CENTER_RIGHT" layoutX="55.0" layoutY="248.0" prefHeight="21.0" prefWidth="184.0" text="Département" />
+      <Label alignment="CENTER_RIGHT" layoutX="55.0" layoutY="303.0" prefHeight="21.0" prefWidth="184.0" text="Promotion" />
+      <Label alignment="CENTER_RIGHT" layoutX="52.0" layoutY="359.0" text="Année d'entrée en formation" />
+      <Label layoutX="130.0" layoutY="40.0" text="AJOUT D'UN STAGIAIRE" textFill="#048b9a">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="nomStTextField" layoutX="276.0" layoutY="59.0" />
-      <TextField fx:id="prenomStTextField" layoutX="275.0" layoutY="124.0" />
-      <TextField fx:id="departementStTextField" layoutX="275.0" layoutY="184.0" />
-      <TextField fx:id="promoStTextField" layoutX="276.0" layoutY="247.0" />
-      <TextField fx:id="anneeStTextField" layoutX="276.0" layoutY="322.0" />
+      <TextField fx:id="nomStTextField" layoutX="275.0" layoutY="133.0" />
+      <TextField fx:id="prenomStTextField" layoutX="275.0" layoutY="188.0" />
+      <TextField fx:id="departementStTextField" layoutX="275.0" layoutY="243.0" />
+      <TextField fx:id="promoStTextField" layoutX="275.0" layoutY="298.0" />
+      <TextField fx:id="anneeStTextField" layoutX="275.0" layoutY="354.0" />
    </children>
 </Pane>
