--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -14,38 +14,35 @@
    <children>
       <BorderPane prefHeight="580.0" prefWidth="760.0" style="-fx-background-color: 0;">
          <right>
-            <AnchorPane prefHeight="580.0" prefWidth="248.0" style="-fx-background-color: violet;" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="580.0" prefWidth="248.0" style="-fx-background-color: #048b9a;" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="votreEMailTextField" layoutX="31.0" layoutY="283.0" prefHeight="32.0" prefWidth="186.0" promptText="votre identifiant ici">
+                  <TextField fx:id="votreEMailTextField" layoutX="31.0" layoutY="221.0" prefHeight="32.0" prefWidth="186.0" promptText="votre identifiant ici" />
+                  <PasswordField fx:id="votreMdpField" layoutX="31.0" layoutY="286.0" prefHeight="32.0" prefWidth="185.0" promptText="mot de passe ici" />
+                  <Button fx:id="creerUnNouvelUtilisateur" contentDisplay="CENTER" layoutX="44.0" layoutY="330.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="159.0" style="-fx-background-color: 0;" text="Première connexion?" textFill="WHITE">
                      <font>
-                        <Font name="Comic Sans MS" size="15.0" />
-                     </font></TextField>
-                  <PasswordField fx:id="votreMdpField" layoutX="31.0" layoutY="348.0" prefHeight="32.0" prefWidth="185.0" promptText="mot de passe ici" />
-                  <Button fx:id="creerUnNouvelUtilisateur" contentDisplay="CENTER" layoutX="39.0" layoutY="398.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="159.0" style="-fx-background-color: 0;" text="Première connexion?">
-                     <font>
-                        <Font name="System Bold Italic" size="11.0" />
+                        <Font name="System Bold Italic" size="13.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="okBtn" layoutX="31.0" layoutY="437.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="64.0" text="OK" />
-                  <Button fx:id="resetBtn" layoutX="151.0" layoutY="437.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="65.0" text="Reset">
+                  <Button fx:id="okBtn" layoutX="31.0" layoutY="438.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="70.0" text="OK" />
+                  <Button fx:id="resetBtn" layoutX="138.0" layoutY="438.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="74.0" text="Reset">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
                   </Button>
-                  <Button fx:id="quitterBtn" layoutX="87.0" layoutY="503.0" mnemonicParsing="false" onAction="#closeWindow" text="Quitter" />
+                  <Button fx:id="quitterBtn" layoutX="90.0" layoutY="486.0" mnemonicParsing="false" onAction="#closeWindow" text="Quitter" />
                </children>
             </AnchorPane>
          </right>
-         <left>
-            <ImageView fitHeight="580.0" fitWidth="224.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <center>
+            <ImageView fitHeight="470.0" fitWidth="513.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
-                  <Image url="@../../ressources/serpent.png" />
+                  <Image url="logo.png" />
                </image>
             </ImageView>
-         </left>
+         </center>
       </BorderPane>
       <BorderPane layoutX="-131.0" layoutY="-237.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
