--- a/src/main/resources/AccueilPrincipal.fxml
+++ b/src/main/resources/AccueilPrincipal.fxml
@@ -9,54 +9,68 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="845.0" prefWidth="1284.0" style="-fx-background-color: 0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#048b9a" height="317.0" layoutX="-2.0" layoutY="147.0" stroke="BLACK" strokeType="INSIDE" width="1291.0" />
-      <TableView fx:id="stagiairesTable" layoutY="185.0" prefHeight="653.0" prefWidth="831.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#048b9a" height="317.0" layoutY="147.0" stroke="BLACK" strokeType="INSIDE" width="1284.0" />
+      <TableView fx:id="stagiairesTable" layoutY="185.0" prefHeight="659.0" prefWidth="747.0">
         <columns>
-          <TableColumn fx:id="nom" prefWidth="247.0" text="Nom" />
-          <TableColumn fx:id="prenom" minWidth="0.0" prefWidth="215.0" text="Prénom" />
-            <TableColumn fx:id="departement" prefWidth="116.0" text="Département" />
-            <TableColumn fx:id="promotion" prefWidth="133.0" text="Promotion" />
-            <TableColumn fx:id="annee" prefWidth="119.0" text="Année" />
+          <TableColumn fx:id="nom" prefWidth="213.0" text="Nom" />
+          <TableColumn fx:id="prenom" minWidth="0.0" prefWidth="183.0" text="Prénom" />
+            <TableColumn fx:id="departement" prefWidth="129.0" text="Département" />
+            <TableColumn fx:id="promotion" prefWidth="129.0" text="Promotion" />
+            <TableColumn fx:id="annee" prefWidth="91.0" text="Année" />
         </columns>
       </TableView>
-      <Button fx:id="quitBtn" layoutX="1128.0" layoutY="784.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="112.0" text="Quitter" />
-      <Button fx:id="decoBtn" layoutX="1138.0" layoutY="50.0" mnemonicParsing="false" text="Déconnection" />
+      <Button fx:id="quitBtn" layoutX="1120.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" text="Quitter" />
       <MenuBar prefHeight="32.0" prefWidth="1284.0">
         <menus>
           <Menu mnemonicParsing="false" text="Application">
             <items>
-              <MenuItem fx:id="decoMenuBtn" mnemonicParsing="false" text="Déconnexion" />
+              <MenuItem fx:id="decoMenuBtn" mnemonicParsing="false" text="Se Déconnecter" />
                   <MenuItem fx:id="quitMenuBtn" mnemonicParsing="false" text="Quitter" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Gestion Stagiaire">
             <items>
-              <MenuItem fx:id="ajoutMenuBtn" mnemonicParsing="false" text="Ajouter" />
-                  <MenuItem fx:id="exporterEnPdfMenuBtn" mnemonicParsing="false" text="Exporter en PDF" />
+              <MenuItem fx:id="ajoutMenuBtn" mnemonicParsing="false" text="Ajouter un nouveau Stagiaire" />
+                  <MenuItem fx:id="exporterEnPdfMenuBtn" mnemonicParsing="false" text="Exporter la liste" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="ajoutBtn" layoutX="854.0" layoutY="512.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" text="Ajouter " />
-      <Button fx:id="modifBtn" layoutX="854.0" layoutY="567.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" text="Modifier" />
-      <Button fx:id="supprBtn" layoutX="854.0" layoutY="620.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" text="Supprimer" />
-      <Button fx:id="rechercheBtn" layoutX="853.0" layoutY="398.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="160.0" text="Recherche Avancée" />
-      <Label alignment="CENTER_RIGHT" layoutX="857.0" layoutY="192.0" prefHeight="21.0" prefWidth="87.0" text="Nom" textFill="WHITE">
+      <Button fx:id="ajoutBtn" layoutX="781.0" layoutY="661.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Ajouter " />
+      <Button fx:id="modifBtn" layoutX="781.0" layoutY="716.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Modifier" />
+      <Button fx:id="supprBtn" layoutX="781.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" text="Supprimer" />
+      <Button fx:id="rechercheBtn" layoutX="921.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Rechercher" />
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="208.0" prefHeight="21.0" prefWidth="87.0" text=" Nom" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label alignment="CENTER_RIGHT" layoutX="857.0" layoutY="236.0" text="Département" textFill="WHITE" />
-      <Label alignment="CENTER_RIGHT" layoutX="857.0" layoutY="284.0" prefHeight="21.0" prefWidth="87.0" text="Promotion" textFill="WHITE" />
-      <Label alignment="CENTER_RIGHT" layoutX="857.0" layoutY="337.0" prefHeight="21.0" prefWidth="87.0" text="Année" textFill="WHITE" />
-      <TextField fx:id="nomRechercheTextField" layoutX="982.0" layoutY="187.0" />
-      <TextField fx:id="departementRechercheBtn" layoutX="1067.0" layoutY="231.0" prefHeight="31.0" prefWidth="101.0" />
-      <TextField fx:id="promotionRechercheBtn" layoutX="1067.0" layoutY="279.0" prefHeight="31.0" prefWidth="101.0" />
-      <TextField fx:id="anneeRechercheBtn" layoutX="1067.0" layoutY="332.0" prefHeight="31.0" prefWidth="101.0" />
-      <Button fx:id="resetBtn" layoutX="1071.0" layoutY="398.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" text="Reset" />
+      <Label alignment="CENTER_RIGHT" layoutX="791.0" layoutY="252.0" text="Département" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="295.0" prefHeight="21.0" prefWidth="87.0" text="Promotion" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="337.0" prefHeight="21.0" prefWidth="87.0" text="Année" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <TextField fx:id="nomRechercheTextField" layoutX="919.0" layoutY="203.0" prefHeight="31.0" prefWidth="244.0" />
+      <TextField fx:id="departementRechercheBtn" layoutX="920.0" layoutY="247.0" prefHeight="31.0" prefWidth="101.0" />
+      <TextField fx:id="promotionRechercheBtn" layoutX="920.0" layoutY="290.0" prefHeight="31.0" prefWidth="162.0" />
+      <TextField fx:id="anneeRechercheBtn" layoutX="920.0" layoutY="332.0" prefHeight="31.0" prefWidth="101.0" />
+      <Button fx:id="resetBtn" layoutX="1057.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Reset" />
       <ImageView fitHeight="112.0" fitWidth="186.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="logo.png" />
          </image>
       </ImageView>
+      <Label layoutX="778.0" layoutY="515.0" text="Nbr Stagiaires" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nbrStagiaireTextField" editable="false" layoutX="921.0" layoutY="510.0" prefHeight="31.0" prefWidth="100.0" />
    </children>
 </Pane>
