--- a/src/main/resources/NouvelUtilisateur.fxml
+++ b/src/main/resources/NouvelUtilisateur.fxml
@@ -1,37 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="552.0" style="-fx-background-color: 0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="519.0" style="-fx-background-color: 0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="eMailTextField" layoutX="248.0" layoutY="130.0" />
-      <Label layoutX="193.0" layoutY="135.0" text="Email" />
-      <Label layoutX="195.0" layoutY="236.0" text="Nom" />
-      <Label layoutX="176.0" layoutY="282.0" text="Prénom" />
-      <Label layoutX="143.0" layoutY="336.0" text="Mot de passe" />
-      <Label layoutX="36.0" layoutY="386.0" text="Confirmation de mot de passe" />
-      <ImageView fitHeight="41.0" fitWidth="52.0" layoutX="147.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@user.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="202.0" layoutY="60.0" text="Ajout de nouvel utilisateur" textFill="#048b9a">
+      <TextField fx:id="eMailTextField" layoutX="286.0" layoutY="131.0" />
+      <Label layoutX="231.0" layoutY="136.0" text="Email" />
+      <Label layoutX="233.0" layoutY="237.0" text="Nom" />
+      <Label layoutX="214.0" layoutY="283.0" text="Prénom" />
+      <Label layoutX="181.0" layoutY="337.0" text="Mot de passe" />
+      <Label layoutX="74.0" layoutY="387.0" text="Confirmation de mot de passe" />
+      <Label layoutX="14.0" layoutY="14.0" text="Ajout de nouvel utilisateur" textFill="#048b9a">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="135.0" layoutY="185.0" text="Code Employé" />
-      <TextField fx:id="codeEmployeTextField" layoutX="248.0" layoutY="180.0" />
-      <TextField fx:id="nomTextField" layoutX="248.0" layoutY="231.0" />
-      <TextField fx:id="prenomTextField" layoutX="248.0" layoutY="277.0" />
-      <PasswordField fx:id="mdpField" layoutX="248.0" layoutY="331.0" />
-      <PasswordField fx:id="confirmMdpField" layoutX="248.0" layoutY="381.0" />
-      <Button fx:id="ok" layoutX="179.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Ok" />
-      <Button fx:id="reset" layoutX="295.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Reset" />
-      <Button fx:id="retour" layoutX="402.0" layoutY="434.0" mnemonicParsing="false" text="Retour" />
+      <Label layoutX="173.0" layoutY="186.0" text="Code Employé" />
+      <TextField fx:id="codeEmployeTextField" layoutX="286.0" layoutY="181.0" />
+      <TextField fx:id="nomTextField" layoutX="286.0" layoutY="232.0" />
+      <TextField fx:id="prenomTextField" layoutX="286.0" layoutY="278.0" />
+      <PasswordField fx:id="mdpField" layoutX="286.0" layoutY="332.0" />
+      <PasswordField fx:id="confirmMdpField" layoutX="286.0" layoutY="382.0" />
+      <Button fx:id="ok" layoutX="164.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Ok" />
+      <Button fx:id="reset" layoutX="283.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Reset" />
+      <Button fx:id="retour" layoutX="407.0" layoutY="434.0" mnemonicParsing="false" text="Retour" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#048b9a" height="58.0" layoutX="-3.0" layoutY="49.0" stroke="BLACK" strokeType="INSIDE" width="525.0" />
    </children>
 </Pane>
