--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -16,8 +16,8 @@
          <right>
             <AnchorPane prefHeight="580.0" prefWidth="248.0" style="-fx-background-color: #048b9a;" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="votreEMailTextField" layoutX="31.0" layoutY="221.0" prefHeight="32.0" prefWidth="186.0" promptText="votre identifiant ici" />
-                  <PasswordField fx:id="votreMdpField" layoutX="31.0" layoutY="286.0" prefHeight="32.0" prefWidth="185.0" promptText="mot de passe ici" />
+                  <TextField fx:id="votreEMailTextField" layoutX="31.0" layoutY="221.0" prefHeight="32.0" prefWidth="186.0" promptText="votre code employé " />
+                  <PasswordField fx:id="votreMdpField" layoutX="31.0" layoutY="286.0" prefHeight="32.0" prefWidth="185.0" promptText="mot de passe " />
                   <Button fx:id="creerUnNouvelUtilisateur" contentDisplay="CENTER" layoutX="44.0" layoutY="330.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="159.0" style="-fx-background-color: 0;" text="Première connexion?" textFill="WHITE">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
