--- a/src/main/resources/AccueilPrincipal.fxml
+++ b/src/main/resources/AccueilPrincipal.fxml
@@ -57,9 +57,9 @@
             <Font name="System Bold" size="15.0" />
          </font></Label>
       <TextField fx:id="nomRechercheTextField" layoutX="919.0" layoutY="203.0" prefHeight="31.0" prefWidth="244.0" />
-      <TextField fx:id="departementRechercheBtn" layoutX="920.0" layoutY="247.0" prefHeight="31.0" prefWidth="101.0" />
-      <TextField fx:id="promotionRechercheBtn" layoutX="920.0" layoutY="290.0" prefHeight="31.0" prefWidth="162.0" />
-      <TextField fx:id="anneeRechercheBtn" layoutX="920.0" layoutY="332.0" prefHeight="31.0" prefWidth="101.0" />
+      <TextField fx:id="departementRechercheTextField" layoutX="920.0" layoutY="247.0" prefHeight="31.0" prefWidth="101.0" />
+      <TextField fx:id="promotionRechercheTextField" layoutX="920.0" layoutY="290.0" prefHeight="31.0" prefWidth="162.0" />
+      <TextField fx:id="anneeRechercheTextField" layoutX="920.0" layoutY="332.0" prefHeight="31.0" prefWidth="101.0" />
       <Button fx:id="resetBtn" layoutX="1057.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Reset" />
       <ImageView fitHeight="112.0" fitWidth="186.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
