--- a/src/main/resources/AccueilPrincipal.fxml
+++ b/src/main/resources/AccueilPrincipal.fxml
@@ -10,16 +10,19 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="845.0" prefWidth="1284.0" style="-fx-background-color: 0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#048b9a" height="317.0" layoutY="147.0" stroke="BLACK" strokeType="INSIDE" width="1284.0" />
-      <TableView fx:id="stagiairesTable" layoutY="185.0" prefHeight="659.0" prefWidth="747.0">
+      <TableView fx:id="stagiairesTable" layoutY="185.0" prefHeight="659.0" prefWidth="755.0">
         <columns>
-          <TableColumn fx:id="nom" prefWidth="213.0" text="Nom" />
-          <TableColumn fx:id="prenom" minWidth="0.0" prefWidth="183.0" text="Prénom" />
-            <TableColumn fx:id="departement" prefWidth="129.0" text="Département" />
-            <TableColumn fx:id="promotion" prefWidth="129.0" text="Promotion" />
-            <TableColumn fx:id="annee" prefWidth="91.0" text="Année" />
+          <TableColumn fx:id="nom" prefWidth="242.0" text="Nom" />
+          <TableColumn fx:id="prenom" prefWidth="142.0" text="Prénom" />
+            <TableColumn fx:id="departement" prefWidth="150.0" text="Département" />
+            <TableColumn fx:id="promotion" prefWidth="127.0" text="Promotion" />
+            <TableColumn fx:id="annee" prefWidth="90.0" text="Année" />
         </columns>
       </TableView>
-      <Button fx:id="quitBtn" layoutX="1120.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" text="Quitter" />
+      <Button fx:id="quitBtn" layoutX="1120.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Quitter" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <MenuBar prefHeight="32.0" prefWidth="1284.0">
         <menus>
           <Menu mnemonicParsing="false" text="Application">
@@ -36,31 +39,46 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="ajoutBtn" layoutX="781.0" layoutY="661.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Ajouter " />
-      <Button fx:id="modifBtn" layoutX="781.0" layoutY="716.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Modifier" />
-      <Button fx:id="supprBtn" layoutX="781.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" text="Supprimer" />
-      <Button fx:id="rechercheBtn" layoutX="921.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Rechercher" />
-      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="208.0" prefHeight="21.0" prefWidth="87.0" text=" Nom" textFill="WHITE">
+      <Button fx:id="ajoutBtn" layoutX="781.0" layoutY="661.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Ajouter " textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="modifBtn" layoutX="781.0" layoutY="716.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Modifier" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="supprBtn" layoutX="781.0" layoutY="769.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Supprimer" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="rechercheBtn" layoutX="921.0" layoutY="415.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #048B9A; -fx-border-color: #FFFFFF;" text="Rechercher" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="238.0" prefHeight="21.0" prefWidth="87.0" text=" Nom" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label alignment="CENTER_RIGHT" layoutX="791.0" layoutY="252.0" text="Département" textFill="WHITE">
+      <Label alignment="CENTER_RIGHT" layoutX="791.0" layoutY="282.0" text="Département" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="295.0" prefHeight="21.0" prefWidth="87.0" text="Promotion" textFill="WHITE">
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="325.0" prefHeight="21.0" prefWidth="87.0" text="Promotion" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="337.0" prefHeight="21.0" prefWidth="87.0" text="Année" textFill="WHITE">
+      <Label alignment="CENTER_RIGHT" layoutX="797.0" layoutY="367.0" prefHeight="21.0" prefWidth="87.0" text="Année" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <TextField fx:id="nomRechercheTextField" layoutX="919.0" layoutY="203.0" prefHeight="31.0" prefWidth="244.0" />
-      <TextField fx:id="departementRechercheTextField" layoutX="920.0" layoutY="247.0" prefHeight="31.0" prefWidth="101.0" />
-      <TextField fx:id="promotionRechercheTextField" layoutX="920.0" layoutY="290.0" prefHeight="31.0" prefWidth="162.0" />
-      <TextField fx:id="anneeRechercheTextField" layoutX="920.0" layoutY="332.0" prefHeight="31.0" prefWidth="101.0" />
-      <Button fx:id="resetBtn" layoutX="1057.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" text="Reset" />
+      <TextField fx:id="nomRechercheTextField" layoutX="919.0" layoutY="233.0" prefHeight="31.0" prefWidth="244.0" />
+      <TextField fx:id="departementRechercheTextField" layoutX="920.0" layoutY="277.0" prefHeight="31.0" prefWidth="101.0" />
+      <TextField fx:id="promotionRechercheTextField" layoutX="920.0" layoutY="320.0" prefHeight="31.0" prefWidth="162.0" />
+      <TextField fx:id="anneeRechercheTextField" layoutX="920.0" layoutY="362.0" prefHeight="31.0" prefWidth="101.0" />
+      <Button fx:id="resetBtn" layoutX="1057.0" layoutY="415.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #048B9A; -fx-border-color: #FFFFFF;" text="Reset" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <ImageView fitHeight="112.0" fitWidth="186.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="logo.png" />
@@ -72,5 +90,10 @@
          </font>
       </Label>
       <TextField fx:id="nbrStagiaireTextField" editable="false" layoutX="921.0" layoutY="510.0" prefHeight="31.0" prefWidth="100.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="791.0" layoutY="185.0" prefHeight="21.0" prefWidth="216.0" text="RECHERCHER DANS LA LISTE :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
