--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -26,13 +26,22 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="okBtn" layoutX="31.0" layoutY="438.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="70.0" text="OK" />
-                  <Button fx:id="resetBtn" layoutX="138.0" layoutY="438.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="74.0" text="Reset">
+                  <Button fx:id="okBtn" layoutX="31.0" layoutY="440.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="70.0" style="-fx-background-color: #048B9A; -fx-border-color: #FFFFFF;" text="OK" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="resetBtn" layoutX="138.0" layoutY="440.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="74.0" style="-fx-background-color: #048B9A; -fx-border-color: #FFFFFF;" text="Reset" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
-                  <Button fx:id="quitterBtn" layoutX="90.0" layoutY="486.0" mnemonicParsing="false" onAction="#closeWindow" text="Quitter" />
+                  <Button fx:id="quitterBtn" layoutX="85.0" layoutY="492.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="31.0" prefWidth="74.0" style="-fx-background-color: #048B9A; -fx-border-color: #FFFFFF;" text="Quitter" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                </children>
             </AnchorPane>
          </right>
