--- a/src/main/resources/NouvelUtilisateur.fxml
+++ b/src/main/resources/NouvelUtilisateur.fxml
@@ -9,26 +9,53 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="519.0" style="-fx-background-color: 0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="eMailTextField" layoutX="286.0" layoutY="131.0" />
-      <Label layoutX="231.0" layoutY="136.0" text="Email" />
-      <Label layoutX="233.0" layoutY="237.0" text="Nom" />
-      <Label layoutX="214.0" layoutY="283.0" text="Prénom" />
-      <Label layoutX="181.0" layoutY="337.0" text="Mot de passe" />
-      <Label layoutX="74.0" layoutY="387.0" text="Confirmation de mot de passe" />
-      <Label layoutX="14.0" layoutY="14.0" text="Ajout de nouvel utilisateur" textFill="#048b9a">
+      <TextField fx:id="eMailTextField" layoutX="235.0" layoutY="131.0" />
+      <Label layoutX="167.0" layoutY="135.0" text="Email" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <Label layoutX="169.0" layoutY="236.0" text="Nom" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <Label layoutX="152.0" layoutY="283.0" text="Prénom" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <Label layoutX="123.0" layoutY="331.0" text="Mot de passe" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <Label layoutX="28.0" layoutY="381.0" text="Confirmation du mot de passe" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <Label layoutX="14.0" layoutY="14.0" text="NOUVEL UTILISATEUR" textFill="#048b9a">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="173.0" layoutY="186.0" text="Code Employé" />
-      <TextField fx:id="codeEmployeTextField" layoutX="286.0" layoutY="181.0" />
-      <TextField fx:id="nomTextField" layoutX="286.0" layoutY="232.0" />
-      <TextField fx:id="prenomTextField" layoutX="286.0" layoutY="278.0" />
-      <PasswordField fx:id="mdpField" layoutX="286.0" layoutY="332.0" />
-      <PasswordField fx:id="confirmMdpField" layoutX="286.0" layoutY="382.0" />
-      <Button fx:id="ok" layoutX="164.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Ok" />
-      <Button fx:id="reset" layoutX="283.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" text="Reset" />
-      <Button fx:id="retour" layoutX="407.0" layoutY="434.0" mnemonicParsing="false" text="Retour" />
+      <Label layoutX="119.0" layoutY="185.0" text="Code Employé" textFill="#048b9a">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Label>
+      <TextField fx:id="codeEmployeTextField" layoutX="235.0" layoutY="181.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="nomTextField" layoutX="235.0" layoutY="232.0" />
+      <TextField fx:id="prenomTextField" layoutX="235.0" layoutY="279.0" />
+      <PasswordField fx:id="mdpField" layoutX="235.0" layoutY="329.0" />
+      <PasswordField fx:id="confirmMdpField" layoutX="235.0" layoutY="379.0" />
+      <Button fx:id="ok" layoutX="114.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Valider" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="reset" layoutX="233.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Reset" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="retour" layoutX="352.0" layoutY="434.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #048B9A;" text="Annuler" textFill="#048b9a">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#048b9a" height="58.0" layoutX="-3.0" layoutY="49.0" stroke="BLACK" strokeType="INSIDE" width="525.0" />
    </children>
 </Pane>
